fix(plateau): nowrap table legend terms
re https://github.com/metanorma/mn-samples-plateau/issues/430

--- a/packages/plateau-layout/layout.css
+++ b/packages/plateau-layout/layout.css
@@ -281,6 +281,9 @@
         padding: 0 10px;
         dl {
           grid-template-columns: fit-content(10px) 100%;
+          dt {
+            white-space: nowrap;
+          }
           dd {
             margin: 0;
           }
